--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chapter16",
   "version": "1.0.0",
-  "homepage": "http://enmorse.github.io/enmorse_react_blog",
+  "homepage": "https://enmorse.github.io/react_deploy_netlify/",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.20.7",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "gh-pages": "^4.0.0",
