--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chapter16",
   "version": "1.0.0",
-  "homepage": "https://enmorse.github.io/react_deploy_netlify/",
+  "homepage": "http://enmorse.github.io/enmorse_react_blog",
   "description": "",
   "main": "index.js",
   "scripts": {
